add new website from server na

--- a/xem-phim-bo/rung-khong-tieng/index.html
+++ b/xem-phim-bo/rung-khong-tieng/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1671,84 +1671,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ke-ngu-mo" title="Những kẻ ngủ mơ">
+          <a class="list-top-movie-link" href="/phim-moi/cua-hang-nha-ben-chuong-ke-tiep-phan-1" title="Cửa hàng nhà bên: Chương kế tiếp (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ke-ngu-mo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-hang-nha-ben-chuong-ke-tiep-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những kẻ ngủ mơ
+             Cửa hàng nhà bên: Chương kế tiếp (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Sleepers
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-vi-anh-hung-cua-sanjay" title="Những Vị Anh Hùng Của Sanjay">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-vi-anh-hung-cua-sanjay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những Vị Anh Hùng Của Sanjay
-            </span>
-            <span class="list-top-movie-item-en">
-             Sanjay's Super Team
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phe-tam" title="Phệ Tâm">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phe-tam-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phệ Tâm
-            </span>
-            <span class="list-top-movie-item-en">
-             Broken the Heart
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-phieu-luu-cua-barb-va-star-duong-den-vista-del-mar" title="Cuộc Phiêu Lưu Của Barb Và Star: Đường Đến Vista Del Mar">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-phieu-luu-cua-barb-va-star-duong-den-vista-del-mar-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Phiêu Lưu Của Barb Và Star: Đường Đến Vista Del Mar
-            </span>
-            <span class="list-top-movie-item-en">
-             Barb and Star Go to Vista Del Mar
+             Check The Store Next Door: The Next Chapter (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1759,21 +1693,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-thoi-gian-phan-3" title="Cổng Thời Gian (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/binh-minh-tu-than" title="Bình Minh Tử Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-thoi-gian-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/binh-minh-tu-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cổng Thời Gian (Phần 3)
+             Bình Minh Tử Thần
             </span>
             <span class="list-top-movie-item-en">
-             Continuum
+             Dawn of the Dead
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-quai-sieu-cap-chuyen-ngay-xua-ngay-xua" title="Hội Quái Siêu Cấp: Chuyện ngày xửa ngày xưa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-quai-sieu-cap-chuyen-ngay-xua-ngay-xua-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hội Quái Siêu Cấp: Chuyện ngày xửa ngày xưa
+            </span>
+            <span class="list-top-movie-item-en">
+             Super Monsters: Once Upon a Rhyme
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-than-sung-may" title="Nữ Thần Súng Máy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-than-sung-may-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Thần Súng Máy
+            </span>
+            <span class="list-top-movie-item-en">
+             Bring Me the Head of the Machine Gun Woman
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/han-quoc-qua-nhung-mon-canh" title="Hàn Quốc qua những món canh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/han-quoc-qua-nhung-mon-canh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hàn Quốc qua những món canh
+            </span>
+            <span class="list-top-movie-item-en">
+             A Nation of Broth
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
