add new website from server na

--- a/xem-phim-bo/tu-hai-trong-minh/index.html
+++ b/xem-phim-bo/tu-hai-trong-minh/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1661,18 +1661,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bach-luyen-thanh-than" title="Bách Luyện Thành Thần">
+          <a class="list-top-movie-link" href="/phim-moi/tra-thu-3" title="Trả Thù">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-luyen-thanh-than-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tra-thu-2023-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bách Luyện Thành Thần
+             Trả Thù
             </span>
             <span class="list-top-movie-item-en">
-             Bách Luyện Thành Thần
+             Ganti-Ganti
+            </span>
+            <span class="list-top-movie-item-view">
+             24 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ong-ke" title="Ông Kẹ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-ke-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ông Kẹ
+            </span>
+            <span class="list-top-movie-item-en">
+             The Boogeyman
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1683,21 +1705,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/leningrad" title="Leningrad">
+          <a class="list-top-movie-link" href="/phim-moi/tada-kun-khong-yeu-duong" title="Tada-kun không yêu đương">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leningrad-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tada-kun-khong-yeu-duong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Leningrad
+             Tada-kun không yêu đương
             </span>
             <span class="list-top-movie-item-en">
-             Leningrad
+             Tada-kun wa Koi wo Shinai, Tada Doesn't Fall in Love
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1705,21 +1727,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ac-thu-va-bong-dem" title="Ác Thú Và Bóng Đêm">
+          <a class="list-top-movie-link" href="/phim-moi/the-cuc-ba-ben" title="Thế Cục Ba Bên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-thu-va-bong-dem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-cuc-ba-ben-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ác Thú Và Bóng Đêm
+             Thế Cục Ba Bên
             </span>
             <span class="list-top-movie-item-en">
-             The Ghost and the Darkness
+             Trinity of Shadows
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1727,40 +1749,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-chang-bao-mau" title="Anh Chàng Bảo Mẫu">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chang-bao-mau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Chàng Bảo Mẫu
-            </span>
-            <span class="list-top-movie-item-en">
-             Gakuen Babysitters
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xac-song-daryl-dixon" title="Xác Sống: Daryl Dixon">
+          <a class="list-top-movie-link" href="/phim-moi/totally-under-control" title="Totally Under Control">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-daryl-dixon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/totally-under-control-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xác Sống: Daryl Dixon
+             Totally Under Control
             </span>
             <span class="list-top-movie-item-en">
-             The Walking Dead: Daryl Dixon
+             Totally Under Control
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
